--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Naad Communication</title>
   </head>
   <body style="text-align: center;">
-    <img src="ganesh.webp" height="300px" width="350px" alt="Ganesh Ji">
+    <img src="https://i10.dainikbhaskar.com/thumbnails/730x548/web2images/www.bhaskar.com/2018/09/12/ganesh_ji_vastu_dosh_1536.jpg" height="300px" width="350px" alt="Ganesh Ji">
     <h1>Naad Communication</h1>
   </body>
 </html>
