--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Naad Communication</title>
   </head>
-  <body style="text-align: center; background-color: #eaf5ff;" >
+  <body style="text-align: center; background-color: #ff8260;" >
     <img src="https://i10.dainikbhaskar.com/thumbnails/730x548/web2images/www.bhaskar.com/2018/09/12/ganesh_ji_vastu_dosh_1536.jpg" height="300px" width="350px" alt="Ganesh Ji">
     <h1>Naad Communication</h1>
   </body>
